ContentServer: convert key:value to JSON; AggregationServer: validate JSON (500 on bad/missing id); keep 201/200/204/400/404